force-app/main/default/objects/Student_Details__c/Student_Details__c.object-meta.xml
<CustomObject>
    <description>Details of the Students</description>
    <label>Student_Detail</label>
    <nameField>
        <label>Student_Details Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Student_Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>