force-app/main/default/objects/Student_Details__c/fields/Grade__c.field-meta.xml
<CustomField>
    <fullName>Grade__c</fullName>
    <label>Grade</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>I</fullName>
                <default>true</default>
                <label>I</label>
            </value>
            <value>
                <fullName>II</fullName>
            </value>
            <value>
                <fullName>III</fullName>
            </value>
            <value>
                <fullName>IV</fullName>
            </value>
            <value>
                <fullName>V</fullName>
            </value>
            <value>
                <fullName>VI</fullName>
            </value>
            <value>
                <fullName>VII</fullName>
            </value>
            <value>
                <fullName>VIII</fullName>
            </value>
            <value>
                <fullName>IX</fullName>
            </value>
            <value>
                <fullName>X</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>