force-app/main/default/objects/Student_Details__c/fields/Student_Id__c.field-meta.xml
<CustomField>
    <fullName>Student_Id__c</fullName>
    <displayFormat>STU-{0000}</displayFormat>
    <label>Student_Id</label>
    <type>AutoNumber</type>
</CustomField>